--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,20 @@ img {
 
 #top-nav-bar {
     padding-top: 1em;
-    display: flex;
-    justify-content: space-around;
+    /*display: flex;
+    justify-content: space-around; */
+}
+
+.top-left-bar {
+    float: left;
+    margin-left: 2em;
+    margin-top: 1em;
+}
+
+.top-right-bar {
+    float: right;
+    margin-right: 2em;
+
 }
 
 .top-nav-link {
@@ -23,9 +35,8 @@ img {
     color: #5F6368;
 }
 
-.top-nav-square {
-    font-size: 1.6em;
-    color: darkgrey;
+.top-nav-link:hover {
+    text-decoration: underline;
 }
 
 .top-sign-in {
@@ -39,13 +50,13 @@ img {
 
 #google-logo {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    margin-top: 8.5em;
+    margin-bottom: 2em;
 }
 
 .search-logo {
     max-height: 6em;
-    margin-top: 7em;
-    margin-bottom: 2em;
 }
 
 .search-area {
@@ -59,8 +70,20 @@ img {
 }
 
 input#search-box {
-    width: 30em;
-    height: 2.5em;
+    width: 35em;
+    height: 2.75em;
+    padding: 1em 1em;
+}
+
+input#search-box:focus-within{
+    box-shadow: 1px 1px 3px 1px #e4e4e4;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 #button-area {
@@ -77,13 +100,14 @@ input#search-box {
     border-radius: .2em;
 }
 
+.middle-nav-link:hover {
+    box-shadow: 1px 1px 3px 1px #e4e4e4;
+    border: 1px #e4e4e4 solid;
+}
+
 #bottom-bar {
     background-color: #f2f2f2;
     border-top: 1px solid #e4e4e4;
-    display: flex;
-    justify-content: space-around;
-    height: 35px;
-    position: fixed;
     width: 100%;
     line-height: 40px;
     position: fixed;
@@ -96,4 +120,18 @@ input#search-box {
     color: #5F6368;
     padding: 0em .85em;
     font-size: 1em;
+}
+
+.bottom-nav-link:hover {
+    text-decoration: underline;
+}
+
+.bottom-left-bar {
+    float: left;
+    margin-left: 3em;
+}
+
+.bottom-right-bar {
+    float: right;
+    margin-right: 3em;
 }
